[package]
name = "denoed25519"
version = "0.1.0"
authors = ["hazae41 <hazae41@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"
js-sys = "0.3"
ed25519 = "1.0.3"
ed25519-dalek = "1.0.1"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }