[package]
name = "berith"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "WebAssembly port of Dalek's Ed25519 and X25519, Rust implementations of Ed25519 (EdDSA over Curve25519) signatures and X25519 (ECDH over Curve25519) key exchange"
repository = "https://github.com/hazae41/berith-wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "0.2.83", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["rand", "u64_backend"] }
x25519-dalek = { version = "1.2.0", default-features = false, features = ["u64_backend"] }
rand = { version = "0.7.3", default-features = false, features = ["wasm-bindgen", "getrandom"] }