[package]
name = "berith"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "WebAssembly port of Ed25519 signatures and X25519 key exchange"
repository = "https://github.com/hazae41/berith-wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.87", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["rand", "u64_backend"] }
x25519-dalek = { version = "1.2.0", default-features = false, features = ["u64_backend"] }
rand = { version = "0.7.3", default-features = false, features = ["wasm-bindgen", "getrandom"] }
