[package]
name = "berith"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "WebAssembly port of Ed25519 signatures and X25519 key exchange"
repository = "https://github.com/hazae41/berith-wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.87", default-features = false }
ed25519-dalek = { version = "2.0.0", default-features = false, features = ["rand_core"] }
x25519-dalek = { version = "2.0.0", default-features = false, features = ["getrandom", "static_secrets"] }
getrandom = { version = "0.2.10", default-features = false, features = ["js"] }
rand_core = { version = "0.6.4", default-features = false, features = [] }
